# call_me_maybe

./: .flake8  .gitignore  Makefile  README.md  llm_test.py  pyproject.toml  roadmap_detail.txt
data/input/: function_calling_tests.json
data/output/: function_calling_results.json
src/: __init__.py  __main__.py  big_prompt_test.py  call_me_maybe.py  constrainer.py  f_s_m.py  file_handling.py  generator.py  llm_handler.py  loader_validator.py  next_steps.md  prompt_builder.py  utils.py
test_data/output/: function_calling_results.json
