[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "call-me-maybe"
version = "0.0.1"
description = "Introduction to function calling in LLM's"
requires-python = ">=3.10"
authors = [
  {name="fandre-m", email="fandre-m@student.42porto.com"},
]
dependencies = [
  "pydantic>=2.0.0",
  "numpy",
]
readme = "README.md"
