[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "call-me-maybe"
version = "0.0.1"
description = "Introduction to function calling in LLM's"
requires-python = ">=3.10"
authors = [
  {name="fandre-m", email="fandre-m@student.42porto.com"},
]
dependencies = [
  "flake8",
  "pydantic>=2.0.0",
  "numpy",
  "llm_sdk",
  "accelerate"
]
readme = "README.md"

[tool.uv.sources]
llm_sdk = {path = "./llm_sdk", editable = true}

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.mypy.overrides]]
module = "llm_sdk.*"
warn_return_any = false
